deploy/deployment.yml
# nginx-deployment.yaml
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-deployment2
#   labels:
#     app: nginx2
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: nginx2
#   template:
#     metadata:
#       labels:
#         app: nginx2
#     spec:
#       containers:
#       - name: nginx2
#         image: akarolence/test-web:17
#         ports:
#         - containerPort: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: akarolence/test-web:17
        name: web
        ports:
        - containerPort: 4200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk-deployment
  labels:
    app: splunk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      containers:
      - name: splunk
        image: akarolence/spring-splunk:78
        ports:
        - containerPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-server
  labels:
    app:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register-server
  template:
    metadata:
      labels:
        app: register-server
    spec:
      imagePullSecrets:
        - name: kustomize-docker-config
      containers:
        - name: register-server
          image: 10.12.1.75:5000/registry/sportif-eureka-service:5
          ports:
            - containerPort: 8001
#10.12.1.75:5000/registry/sportif-eureka-service:5
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: spring
# spec:
#   selector:
#     app: spring
#   type: NodePort
#   ports:
#   - protocol: TCP
#     port: 8084
#     targetPort: 8084
#     # nodePort: 30456

# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: nginx2
# spec:
#   selector:
#     app: nginx2
#   type: NodePort
#   ports:
#   - protocol: TCP
#     port: 4200
#     targetPort: 4200
    # nodePort: 30457

# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-node-service
# spec:
#   type: NodePort
#   selector:
#     app: nginx-dep1
#     # app.kubernetes.io/name: spring2
#   ports:
#     - port: 4200
#       targetPort: 4200
#       # Optional field
#       nodePort: 30456
